--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galaxy Rides - Premium Taxi Booking Service</title>
     <meta name="description" content="Book premium rides across the galaxy with Galaxy Rides. 24/7 service, verified drivers, real-time tracking. Experience cosmic comfort and stellar service." />
